--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
-    "node": "^21.1.0",
+    "node": ">20.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
