--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@tremor/react": "^3.11.1",
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.4.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
