--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tremor/react": "^3.11.1",
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
