--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
+    "puppeteer": "^21.5.2",
+    "puppeteer-core": "^21.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
