--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
-    "puppeteer": "^21.5.2",
-    "puppeteer-core": "^21.5.2",
+    "puppeteer": "^20.1.2",
+    "puppeteer-core": "^20.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
