--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/supabase-js": "^2.39.0",
     "@tremor/react": "^3.11.1",
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
@@ -29,6 +31,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.2"
   }
 }
